--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>White Omar</title>
-    <meta name="keywords" content="HTML5 Template" />
+    <meta name="keywords" content="White Omar" />
     <meta name="description" content="" />
-    <meta name="author" content="itembridge.com" />
+    <meta name="author" content="WhiteOmar.com" />
     <meta
       class="viewport"
       name="viewport"
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="img/wHITE-black-logo.png" />
 
     <!-- Fonts -->
     <link
@@ -160,7 +160,7 @@
         <div class="col-sm-5 header-box text-right hidden-xs">
           <!-- demonstration - //keith-wood.name/countdownRef.html -->
           <div class="countdown-box">
-            <div class="countdown" data-date="2021, 10, 28"></div>
+            <div class="countdown" data-date="2022, 03, 28"></div>
           </div>
         </div>
         <!-- .header-box -->
@@ -262,7 +262,7 @@
                     <div class="features-box">
                       <div class="icon">
                         <img
-                          src="img/svg/view.svg"
+                          src="img/svg/features-6.svg"
                           width="90"
                           height="90"
                           alt="#"
@@ -289,7 +289,7 @@
                     <div class="features-box">
                       <div class="icon">
                         <img
-                          src="img/svg/peak.svg"
+                          src="img/svg/features-2.svg"
                           width="90"
                           height="90"
                           alt="#"
