--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     <div class="features-box">
                       <div class="icon">
                         <img
-                          src="img/svg/core-values.svg"
+                          src="img/svg/check.svg"
                           width="90"
                           height="90"
                           alt="#"
